# easy-chat-prompts

./: .gitignore  .history  .repl_history  README.md  config.ini  easy-chat.yaml  main.py  requirements.txt  setup.cfg
chat/: openai_client.py  prompts_venv.py  repl.py
chat/utils/: json_file_curd.py
conf/: config.ini
