[metadata]
name = easy-chat-prompts
summary = Easy ChatGPT Prompts
description-file =
    README.md
classifier =
    Environment :: ChatGPT client
    Intended Audience :: Information Technology
    Operating System :: Mac
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.2

[files]
packages =
    chat

[entry_points]
console_scripts =
    easy-chat = chat.repl:main
